src/styles/styles.css
:root { 
  --board-width: 240px;
}

* {
  box-sizing: border-box;
}

p {
  margin: 10px auto;
  text-align: center;
}

body {
  font-family: sans-serif;
  margin: 20px;
  padding: 0;
  background-image: url("../images/zen.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}


ul {
  display: flex;
  width: 90%;
  flex-wrap: wrap;
  padding-inline-start: 20px;
}

/* Game */
.game-background {
  background-color: rgba(255, 255, 255, 0.65);
  min-height: 100vh;
  border-radius: 2rem;
}

.loading-spinner {
  display: flex;
  justify-content: center; 
  align-items: center; 
  min-height: 150px;
}

/* Gametitle */
.game-title {
  text-align: center;
  margin: 1rem;
  font-size: 4rem;
}

/* GameBoard */
.board {
  width: var(--board-width);
  margin: 0 auto;
}

/* MoveHistory */
.move-history {
  margin: 0 3rem 0 3rem;
  padding: 0 0 2rem 0;
}

.move-history-turn {
  margin: 1rem 2rem 1rem 1rem;
}

.move-history-gridboard {
  filter: grayscale(100%);
}

.move-history-small-grid {
  transform: scale(0.6);
  margin-left: 1rem;
  transform-origin: top left;
  font-size: 1.5rem;
}

/* Grid square */
.square {
  background: rgb(215, 237, 247);
  border: 2px solid #1976d2;
  float: left;
  font-size: 3.5rem;
  font-weight: bold;
  line-height: 2rem;
  width: 4rem;
  height: 4rem;
  padding: 0;
  text-align: center;
}

.x-square {
  color: darkblue;
}

.o-square {
  color: darkgreen;
}

.square-disabled {
  color: black;
  pointer-events: none;
}

.square-winning {
  color: red;
}

.square-nonwinning {
  filter: grayscale(100%);
}

/* Status */
.status {
  margin-bottom: 1.5rem;
}

/* Playerform */
.player-form-player-name {
  display: flex;
  justify-content: space-evenly;
  align-items: baseline;
  width: 50%;
  margin-top: 1rem;
}

.player-form-player-one {
  padding-right: 1rem;
}

.player-setup-title {
  text-align: center;
}

.player-setup-grid {
  justify-content: center;
  align-items: center;
}

